# dev-docs

./: .gitignore  CMakeLists.txt  MyREADME.md  README.md
3rd/boost_interface/: CMakeLists.txt
3rd/encrypt_module/include/: encrypt_wrapper.hpp
3rd/encrypted_module/: CMakeLists.txt
3rd/ev_encrypt_module/: README.md
3rd/ev_encrypt_module/include/: encrypt_wrapper.hpp
3rd/ev_encrypt_module/lib/pkgconfig/: ev_encrypt_module.pc
3rd/fire_extinguisher/include/: class_fire_extinguisher.h
3rd/license/v10/: CMakeLists.txt
3rd/license/v20_0/include/: ji_license_impl.h
3rd/license/v20_0/lib/: license_lib.sig
3rd/license/v20_0/lib/pkgconfig/: ji_license.pc
3rd/license/v7/: ev_license
3rd/license/v7.1/: CMakeLists.txt
3rd/wkt_parser/: CMakeLists.txt  README.md
3rd/wkt_parser/include/: WKTParser.h
authorization/: privateKey.pem  pubKey.pem
cmake/: FindEncryptModule.cmake  FindJILicense.cmake
config/: README.md  algo_config.json
doc/: Authorization.md  EV_SDK配置协议说明.md  MyREADME.md  SdkGuide.txt
include/: Configuration.hpp  SampleDetector.hpp  ji.h  ji_utils.h  model_str.hpp  pubKey.hpp
model/: README.md  algo_config.json  coco.data  yolov3.cfg
sample-classifier/: CMakeLists.txt
sample-classifier/cmake/: FindDarknet.cmake
sample-classifier/darknet/: CMakeLists.txt
sample-classifier/darknet/include/: darknet.h
sample-classifier/generated-data/: privateKey.pem
sample-classifier/include/: ClassifierPredictor.hpp
sample-classifier/model/config/: imagenet1k.data
sample-classifier/src/: ClassifierPredictor.cpp  main.cpp  utils.cpp
src/: CMakeLists.txt  SampleDetector.cpp  ji.cpp  ji_utils.cpp  pubKey.hpp  yolo.cpp  yolo.h
test/: test  test.cpp
